cambios login y filtros

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
         <li class="login"><a href="./login.html">Iniciar sesión</a></li>
         <li class="display">
           <img src="./assets/icons/user.svg" alt="Mi perfil" width="26" height="26">
-          <p>Perfil</p>
+          <p class="profile-name">Perfil</p>
           <ul class="profile">
             <li><a href="./404file.html">Mi perfil</a></li>
             <li><a href="./404file.html">Ajustes</a></li>
@@ -102,7 +102,7 @@
 
     <h1>Mi raza favorita es: <br>Ad<img src="./assets/icons/icono_logo_blanco.svg" alt="logo letra 'o'">ptado</h1>
     <p>Kompi el buscador de animales más<br> grande de la red de España</p>
-    <a href="./404file.html" class="button">Comenzar búsqueda</a>
+    <a href="./filter-animals.html" class="button">Comenzar búsqueda</a>
 
   </main>
 
@@ -112,19 +112,19 @@
 
     <div class="icon">
       <div class="shadow">
-        <a href="./404file.html"> <img src="./assets/icons/icono_perro.svg" alt="perros"></a>
+        <a href='./filter-animals.html?category="Perro"'> <img src="./assets/icons/icono_perro.svg" alt="perros"></a>
       </div>
       <div class="shadow">
-        <a href="./404file.html"><img src="./assets/icons/icono_gato.svg" alt="gatos"></a>
+        <a href='./filter-animals.html?category="Gato"'><img src="./assets/icons/icono_gato.svg" alt="gatos"></a>
       </div>
       <div class="shadow">
-        <a href="./404file.html"> <img src="./assets/icons/icono_pajaro.svg" alt="pajaros"></a>
+        <a href='./filter-animals.html?category="Ave"'> <img src="./assets/icons/icono_pajaro.svg" alt="pajaros"></a>
       </div>
       <div class="shadow">
-        <a href="./404file.html"> <img src="./assets/icons/icono_roedor.svg" alt="roedores"></a>
+        <a href='./filter-animals.html?category="Roedor"'> <img src="./assets/icons/icono_roedor.svg" alt="roedores"></a>
       </div>
       <div class="shadow">
-        <a href="./404file.html"><img src="./assets/icons/icono_reptil.svg" alt="reptiles"></a>
+        <a href='./filter-animals.html?category="Reptil"'><img src="./assets/icons/icono_reptil.svg" alt="reptiles"></a>
       </div>
     </div>
 
