ver contraseña con el icono ojo

--- a/src/index.html
+++ b/src/index.html
@@ -99,12 +99,13 @@
 
 
   <!-- ----------------------------------HOME---------------------------------- -->
+
   <main class="home">
 
     <h1>Mi raza favorita es: <br>Ad<img src="./assets/icons/icono_logo_blanco.svg" alt="logo letra 'o'" width="36"
         height="49">ptado</h1>
     <p>Kompi el buscador de animales más<br> grande de la red de España</p>
-    <a href="./alert-message.html" class="button">Comenzar búsqueda</a>
+    <a href="./filter-animals.html"  class="button">Comenzar búsqueda</a>
 
   </main>
 
@@ -379,7 +380,7 @@
 
       <div class="column">
         <p>Información</p>
-        <a href="./404file.html">Sobre nosotros</a>
+        <a href="./alert-message.html">Sobre nosotros</a>
         <a href="./404file.html">Busca una mascota</a>
         <a href="./404file.html">Contáctanos</a>
       </div>
