--- a/src/login.html
+++ b/src/login.html
@@ -25,11 +25,32 @@
     </a>
 
     <div class="card-login">
-      <!-- <p class="p-title">Iniciar sesión</p> -->
+      <!-- <p class="p-title">Iniciar sesión</p> --><form id="login">
+
+</form>
       <p>E-mail</p>
-      <input class="input-email">
-      <p>Contraseña</p>
-      <input class="input-password" type="password">
+      <input class="input-email" placeholder="buscokompi@gmail.com" >
+
+
+
+      <div>
+        <p class="pass">Contraseña</p>
+        <input type="password" id="password" placeholder="BuscoKompi6"/>
+        <input type="checkbox" id="toggle-password" />
+        <label for="toggle-password"></label>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
       <p class="forgot-pass"><a  href="./forgot-password.html">¿Has olvidado tu contraseña?</a></p>
       <div class="button btn-login-email"><span>Continuar</span></div>
       <div class="button btn-login-google"><img class="google" src="./assets/icons/google_icono.svg" alt="Icono Google"><span>Inicia sesión con Google</span></div>
