algunos media queries de los 2 login y mostrar contraseña en los dos loggin

--- a/src/login.html
+++ b/src/login.html
@@ -30,13 +30,9 @@
 </form>
 <div>
       <p>E-mail</p>
-      <input class="input-email" placeholder="buscokompi@gmail.com" >
-
-
-
-
+      <input class="input-email" placeholder="adoptaunkompi@gmail.com" >
         <p class="pass">Contraseña</p>
-        <input type="password" id="password" placeholder="BuscoKompi6"/>
+        <input type="password" id="password" placeholder="BuscoKompi6."/>
         <input type="checkbox" id="toggle-password" />
         <label for="toggle-password"></label>
       </div>
