--- a/src/signin.html
+++ b/src/signin.html
@@ -25,21 +25,28 @@
     </a>
 
     <form class="card-login">
-
+<div>
       <p>E-mail <span>*</span></p>
-      <input class="input-email" type="email" required="required">
+      <input class="input-email" type="email" required="required" placeholder="adoptaunkompi@gmail.com">
 
-      <p>Contraseña <span>*</span></p>
-
-      <input  name="password" class="input-password" id="password" type="password" required="required" pattern="(?=^.{8,}$)(?=.*\d)(?=.*\W+)(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" onkeyup='check();' />
-
+      <p class="pass">Contraseña <span>*</span></p>
+<div>
+      <input name="password" class="input-password input-email" placeholder="Buscokompi6."
+       id="password" type="password" required="required"
+       pattern="(?=^.{8,}$)(?=.*\d)(?=.*\W+)(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$"
+       onkeyup='check();' />
+        <input type="checkbox" id="toggle-password" />
+        <label for="toggle-password"></label>
+      </div>
+      </div>
 
 
       <p>Utiliza ocho caracteres como mínimo con una mayuscula, una minúscula, un número y un caracter especial</p>
 
       <p>Verifica tu contraseña <span>*</span></p>
 
-     <input class="input-password-check" type="password" name="confirm_password" id="confirm_password" required="required"
+     <input class="input-password-check" type="password" placeholder="Buscokompi6."
+     name="confirm_password" id="confirm_password" required="required"
         onkeyup='check();'>
 
 
@@ -55,7 +62,7 @@
       <div class="button btn-signin-facebook"><img class="facebook"
           src="./assets/icons/facebook_icono.svg"><span>Regístrate con Facebook</span></div>
     </form>
-    <p>¿Ya tienes una cuenta? <a class="link-signin" href="./login.html">Inicia sesión</a></p>
+    <p class="register">¿Ya tienes una cuenta? <a class="link-signin" href="./login.html">Inicia sesión</a></p>
   </div>
 
   <script type="module" src="./js/signin.js"></script>
