cambios en la ficha del animal

--- a/src/animal-card-info.html
+++ b/src/animal-card-info.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ficha Animal</title>
+    <title>Kompi | Filtro de búsqueda</title>
+    <link rel="icon" href="./assets/icons/icono_logo.svg">
     <link rel="stylesheet" href="./css/animal_card_info.css">
     <!-- Open Sans font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -70,23 +71,23 @@
                 <img class="img2" src="./assets/Gorda2.jpg" alt="imagen2">
             </div>
         </div>
-        <div class="layer-1-buttons">
+        <!-- <div class="layer-1-buttons">
             <div class="arrow-container">
                 <img class="back" src="./assets/left-arrow.png" alt="flecha-back">
             </div>
             <div class="arrow-container">
                 <img class="next" src="./assets/right-arrow.png" alt="flecha-next">
             </div>
-        </div>
+        </div> -->
         <div class="info">
             <div class="name-location">
                 <h2 class="name">Gorda</h2>
                 <p class="location">Las Pedroñeras</p>
             </div>
-            <div class="save-share">
+            <!-- <div class="save-share">
                 <h3 class="save">Guardar</h3>
                 <h3 class="share">Compartir</h3>
-            </div>
+            </div> -->
         </div>
     </header>
 
@@ -138,11 +139,11 @@
                 <p class="esterilized"></p>
             </div>
             <div class="adoption">
-                <h3>¿Quieres adoptar o conocer más a Nala?<br>
+                <h3>¿Quieres adoptar o saber más sobre Nala?<br>
                     ¡Ponte en contacto con su cuidador!</h3>
 
                 <div class="adoption-link-container">
-                    <a href="#">CONTACTAR</a>
+                    <a href="./404file.html">CONTACTAR</a>
                 </div>
             </div>
         </div>
@@ -191,7 +192,7 @@
 
             <div class="column two">
                 <a href="./index.html"><img class="logo" src="./assets/icons/version_blanca_logo.svg"></a>
-                <a href="mailto:buscokompi@gmail.com" class="mail">buscokompi@gmail.com</a>
+                <a href="mailto:buscokompi@gmail.com" class="mail">adoptaunkompi@gmail.com</a>
                 <div class="social">
                     <a href="https://www.facebook.com/adoptaunkompi/"><img src="./assets/icons/icono_facebook.svg"
                             alt="facebook"></a>
@@ -205,21 +206,21 @@
             <div class="column">
                 <p>Información</p>
                 <a href="./404file.html">Sobre nosotros</a>
-                <a href="./404file.html">Busca una mascota</a>
+                <a href="./filter-animals.html">Busca una mascota</a>
                 <a href="./404file.html">Contáctanos</a>
             </div>
 
             <div class="column three">
-                <p>Acerca de...</p>
+                <p>Acerca de</p>
                 <a href="./404file.html">Política de privacidad</a>
                 <a href="./404file.html">Términos y condiciones</a>
-                <a href="./404file.html">Preguntas frecuentes</a>
+                <a href="./index.html#faq">Preguntas frecuentes</a>
             </div>
         </div>
 
         <div class="copyright">
             <hr class=" horizontal-line">
-            <p>© 2022. Todos los Derechos Reservados. <br>Desarrollado por Karmic Koala</p>
+            <p>© 2022 Todos los Derechos Reservados. <br>Desarrollado por Karmic Koala</p>
         </div>
 
     </footer>
