arreglos de bogs

--- a/src/email-validated.html
+++ b/src/email-validated.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./css/email-validated.css">
     <link rel="icon" href="./assets/icons/Icono_logo.svg">
     <title>Kompi | Recuperar contraseña</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
+    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
 </head>
 <body>
 
