--- a/src/filter-animals.html
+++ b/src/filter-animals.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@600;700;800&display=swap" rel="stylesheet">
   <script type="module" src="./js/filter-animal.js"></script>
   <script type="module" src="./js/index.js"></script>
-  <!-- <script type="module" src="./js/logout.js"></script> -->
+  <script type="module" src="./js/logout.js"></script>
 </head>
 
 <body>
