--- a/src/forgot-password.html
+++ b/src/forgot-password.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./css/forgot-password.css">
     <link rel="icon" href="./assets/icons/Icono_logo.svg">
     <title>Kompi | Recuperar contraseña</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
+    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -23,6 +26,7 @@
       <button class="btn">Restaurar contraseña</button>
     </div>
   </div>
-  
+
+  <script type="module" src="./js/forgot-password.js"></script>
 </body>
 </html>
