--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,7 @@
     <p class="text">Aquí tienes algunas de las últimas mascotas en adopción</p>
 
     <div class="group">
-      <div class="card">
+      <!--<div class="card">
         <div class="img-container">
           <img src="./assets/bordercollie_smiling.jpg" alt="mascota">
         </div>
@@ -169,7 +169,7 @@
         </div>
         <h3 class="name">Gus</h3>
         <p><img src="./assets/icons/icono_logo_negro.svg" alt="">Teide</p>
-      </div>
+      </div>-->
       <div class="card-extra">
         <img src="./assets/icons/icono_logo_blanco.svg" alt="Kompi Logo" width="88" height="88">
         <p><span>+315 mascotas</span></p>
@@ -178,8 +178,6 @@
           <a class="button" href="./filter-animals.html">Ver más</a>
         </div>
       </div>
-
-
 
     </div>
 
