--- a/src/signin.html
+++ b/src/signin.html
@@ -11,8 +11,8 @@
   <!--Font-Family: Open Sans and Lato -->
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@300;400;600&display=swap"
     rel="stylesheet">
-  <title>Sign in</title>
-  <link rel="icon" href="./assets/pestaña_icono_logo.svg">
+    <title>Kompi | Registrarse</title>
+    <link rel="icon" href="./assets/icons/icono_logo.svg">
 </head>
 
 <body>
