nombres templateanimals cambiados

--- a/src/animal-card-info.html
+++ b/src/animal-card-info.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kompi | Filtro de búsqueda</title>
     <link rel="icon" href="./assets/icons/icono_logo.svg">
-    <link rel="stylesheet" href="./css/animal_card_info.css">
+    <link rel="stylesheet" href="./css/animal-card-info.css">
     <!-- Open Sans font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
-    <script type="module" src="./js/animal_card_info.js"></script>
+    <script type="module" src="./js/animal-card-info.js"></script>
 </head>
 
 <body>
