--- a/src/signin.html
+++ b/src/signin.html
@@ -34,7 +34,7 @@
       <p>Utiliza ocho caracteres como mínimo con una mayuscula, una minúscula, un número y un caracter especial</p>
 
       <p>Verifica tu contraseña <span>*</span></p>
-      <input class="input-password-check" type="password" name="confirm_password" id="confirm_password" required="required">
+      <input class="input-password-check" type="password" name="confirm_password" id="confirm_password" required="required" onkeyup='check();'>
       <span id='message'></span>
 
       <button type="submit" class="button btn-signin-email">Continuar</button>
