solo para cambiar de rama no hay cambios

--- a/src/formulario.html
+++ b/src/formulario.html
@@ -162,7 +162,7 @@
   </main>
   <footer>
 
-    <div class="information">
+    <divs class="information">
 
       <div class="column two">
         <a href="./index.html"><img class="logo" src="./assets/icons/version_blanca_logo.svg" alt="Kompi logo"
@@ -191,7 +191,7 @@
         <a href="./404file.html">Términos y condiciones</a>
         <a href="./404file.html">Preguntas frecuentes</a>
       </div>
-    </div>
+    </divs>
 
     <div class="copyright">
       <hr class=" horizontal-line">
