--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
     <h1>Mi raza favorita es: <br>Ad<img src="./assets/icons/icono_logo_blanco.svg" alt="logo letra 'o'" width="36"
         height="49">ptado</h1>
     <p>Kompi el buscador de animales más<br> grande de la red de España</p>
-    <a href="./filter-animals.html" class="button">Comenzar búsqueda</a>
+    <a href="./formulario.html" class="button">Comenzar búsqueda</a>
 
   </main>
 
