cambios login y logout de todas las pantallas

--- a/src/filter-animals.html
+++ b/src/filter-animals.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Kompi | Filtro de búsqueda</title>
+  <link rel="icon" href="./assets/icons/icono_logo.svg">
   <link rel="stylesheet" href="./css/filter-animals.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
@@ -53,7 +54,7 @@
           <img src="./assets/icons/user.svg" alt="Mi perfil" width="26" height="26">
           <p class="profile-name">Perfil</p>
           <ul class="profile">
-            <li><a href="./404file.html">Mi perfil</a></li>
+            <li><a href="./formulario.html">Mi perfil</a></li>
             <li><a href="./404file.html">Ajustes</a></li>
             <li class="signout">Cerrar sesión</li>
           </ul>
