--- a/src/formulario.html
+++ b/src/formulario.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Kompi | Perfil - Nueva Ficha de Animal</title>
   <link rel="stylesheet" href="./css/formulario.css">
+  <link rel="icon" href="./assets/icons/icono_logo.svg">
   <!-- Open Sans font-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,6 +21,7 @@
     rel="stylesheet">
   <script type="module" src="./js/formulario.js"></script>
   <script type="module" src="./js/index.js"></script>
+  <script type="module" src="./js/logout.js"></script>
 </head>
 
 <body>
@@ -63,7 +65,7 @@
           <img src="./assets/icons/user.svg" alt="Mi perfil" width="26" height="26">
           <p class="profile-name">Perfil</p>
           <ul class="profile">
-            <li><a href="./404file.html">Mi perfil</a></li>
+            <li><a href="./formulario.html">Mi perfil</a></li>
             <li><a href="./404file.html">Ajustes</a></li>
             <li class="signout">Cerrar sesión</li>
           </ul>
