--- a/src/options-newuser.html
+++ b/src/options-newuser.html
@@ -23,7 +23,7 @@
             <img src="./assets/icons/icono_logo_negro.svg" alt="Isologo">
             <p>ADOPTAR</p>
         </a>
-        <a href="./404file.html" class="give-in-adoption">
+        <a href="./formulario.html" class="give-in-adoption">
             <img src="./assets/icons/icono_logo_blanco.svg" alt="Isologo">
             <p>DAR EN ADOPCIÓN</p>
         </a>
