--- a/src/animal-card-info.html
+++ b/src/animal-card-info.html
@@ -20,6 +20,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <script type="module" src="./js/animal-card-info.js"></script>
+    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./js/logout.js"></script>
 </head>
 
 <body>
