cambios ficha animal

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
           <img src="./assets/icons/user.svg" alt="Mi perfil" width="26" height="26">
           <p class="profile-name">Perfil</p>
           <ul class="profile">
-            <li><a href="./formulario.html">Mi perfil</a></li>
+            <li><a href="./404file.html">Mi perfil</a></li>
             <li><a href="./404file.html">Ajustes</a></li>
             <li class="signout">Cerrar sesión</li>
           </ul>
