--- a/src/animal-card-info.html
+++ b/src/animal-card-info.html
@@ -21,7 +21,7 @@
         rel="stylesheet">
     <script type="module" src="./js/animal-card-info.js"></script>
     <script type="module" src="./js/index.js"></script>
-    <script type="module" src="./js/logout.js"></script>
+    <!--<script type="module" src="./js/logout.js"></script>-->
 </head>
 
 <body>
