--- a/src/animal-card-info.html
+++ b/src/animal-card-info.html
@@ -157,31 +157,39 @@
 
             <div class="group">
                 <div class="card">
-                    <img src="./assets/bordercollie_smiling.jpg" alt="mascota">
+                    <div class="img-container">
+                        <img src="./assets/bordercollie_smiling.jpg" alt="mascota">
+                    </div>
                     <h3 class="name">Nala</h3>
-                    <p><img src="./assets/icons/icono_logo.svg" alt="">Las Pedroñeras</p>
+                    <p><img src="./assets/icons/icono_logo_negro.svg" alt="">Las Pedroñeras</p>
                 </div>
                 <div class="card">
-                    <img src="./assets/imgYorkshire.jpg" alt="mascota">
+                    <div class="img-container">
+                        <img src="./assets/imgYorkshire.jpg" alt="mascota">
+                    </div>
                     <h3 class="name">Chico</h3>
-                    <p><img src="./assets/icons/icono_logo.svg" alt="">Arona</p>
+                    <p><img src="./assets/icons/icono_logo_negro.svg" alt="">Arona</p>
                 </div>
                 <div class="card">
-                    <img src="./assets/imgSleapingCat.jpg" alt="mascota">
+                    <div class="img-container">
+                        <img src="./assets/imgSleapingCat.jpg" alt="mascota">
+                    </div>
                     <h3 class="name">Coco</h3>
-                    <p><img src="./assets/icons/icono_logo.svg" alt="">Córdoba</p>
+                    <p><img src="./assets/icons/icono_logo_negro.svg" alt="">Córdoba</p>
                 </div>
                 <div class="card">
-                    <img src="./assets/whitebrown_hamster.jpg" alt="mascota">
+                    <div class="img-container">
+                        <img src="./assets/whitebrown_hamster.jpg" alt="mascota">
+                    </div>
                     <h3 class="name">Gus</h3>
-                    <p><img src="./assets/icons/icono_logo.svg" alt="">Teide</p>
+                    <p><img src="./assets/icons/icono_logo_negro.svg" alt="">Teide</p>
                 </div>
                 <div class="card-extra">
-                    <img src="./assets/icons/icono_logo_blanco.svg" alt="logo Kompi">
+                    <img src="./assets/icons/icono_logo_blanco.svg" alt="Kompi Logo" width="88" height="88">
                     <p><span>+315 mascotas</span></p>
                     <p>disponibles en kompi</p>
                     <div class="footer">
-                        <a class="button" href="./404file.html">Ver más</a>
+                        <a class="button" href="./filter-animals.html">Ver más</a>
                     </div>
                 </div>
             </div>
