añadido .env, folder tests, vue.config, base.css en assets con root general para todo el proyecto y reorganización de fotos. Posible problema con las rutas de los css del anterior commit realizado.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -34,7 +34,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="../css/index.css">
   <script type="module" src="./js/index.js"></script>
   <script type="module" src="./js/logout.js"></script>
 
@@ -50,7 +50,7 @@
   <!-- --------------------------------------NAV---------------------------------- -->
   <header>
     <nav class="topbar">
-      <a href="index.html"><img class="logo" src="./assets/icons/version_primario_logo.svg" width="112" height="34"
+      <a href="index.html"><img class="logo" src="../assets/icons/version_primario_logo.svg" width="112" height="34"
           alt="Logo"></a>
       <div class="burger-img"></div>
       <div class="burger">
@@ -62,13 +62,13 @@
             <li><a href="./404file.html">Sobre nosotros</a></li>
           </ul>
           <div class="icons">
-            <a href="https://www.facebook.com/adoptaunkompi/"><img src="./assets/icons/icono_facebook_yellow.svg"
+            <a href="https://www.facebook.com/adoptaunkompi/"><img src="../assets/icons/icono_facebook_yellow.svg"
                 width="27" height="27" alt="facebook"></a>
-            <a href="https://www.instagram.com/adoptaunkompi"><img src="./assets/icons/icono_instagram_yellow.svg"
+            <a href="https://www.instagram.com/adoptaunkompi"><img src="../assets/icons/icono_instagram_yellow.svg"
                 width="27" height="27" alt="instagram"></a>
-            <a href="https://twitter.com/adoptaunkompi"><img src="./assets/icons/icono_twitter_yellow.svg" width="27"
+            <a href="https://twitter.com/adoptaunkompi"><img src="../assets/icons/icono_twitter_yellow.svg" width="27"
                 height="27" alt="twitter"></a>
-            <a href="./login.html"><img src="./assets/icons/corazon_icono.svg" width="27" height="27" alt="favoritos"
+            <a href="./login.html"><img src="../assets/icons/corazon_icono.svg" width="27" height="27" alt="favoritos"
                 class="heart"></a>
           </div>
           <div class="m-footer">
@@ -81,11 +81,11 @@
         <li><a href="./404file.html">Adopción</a></li>
         <li><a href="./filter-animals.html">Categorías</a></li>
         <li><a href="./404file.html">Sobre nosotros</a></li>
-        <li><a href="./404file.html"><img src="./assets/icons/corazon_icono.svg" alt="favoritos"></a></li>
+        <li><a href="./404file.html"><img src="../assets/icons/corazon_icono.svg" alt="favoritos"></a></li>
         <div class="vertical-line"></div>
         <li class="login"><a href="./login.html">Iniciar sesión</a></li>
         <li class="display">
-          <img src="./assets/icons/user.svg" alt="Mi perfil" width="26" height="26">
+          <img src="../assets/icons/user.svg" alt="Mi perfil" width="26" height="26">
           <p class="profile-name">Perfil</p>
           <ul class="profile">
             <li><a href="./404file.html">Mi perfil</a></li>
@@ -102,7 +102,7 @@
 
   <main class="home">
 
-    <h1>Mi raza favorita es: <br>Ad<img src="./assets/icons/icono_logo_blanco.svg" alt="logo letra 'o'" width="36"
+    <h1>Mi raza favorita es: <br>Ad<img src="../assets/icons/icono_logo_blanco.svg" alt="logo letra 'o'" width="36"
         height="49">ptado</h1>
     <p>Kompi el buscador de animales más<br> grande de la red de España</p>
     <a href="./filter-animals.html" class="button">Comenzar búsqueda</a>
@@ -115,20 +115,20 @@
 
     <div class="icon">
       <div class="shadow">
-        <a href='./filter-animals.html?category="Perro"'> <img src="./assets/icons/icono_perro.svg" alt="perros"></a>
+        <a href='./filter-animals.html?category="Perro"'> <img src="../assets/icons/icono_perro.svg" alt="perros"></a>
       </div>
       <div class="shadow">
-        <a href='./filter-animals.html?category="Gato"'><img src="./assets/icons/icono_gato.svg" alt="gatos"></a>
+        <a href='./filter-animals.html?category="Gato"'><img src="../assets/icons/icono_gato.svg" alt="gatos"></a>
       </div>
       <div class="shadow">
-        <a href='./filter-animals.html?category="Ave"'> <img src="./assets/icons/icono_pajaro.svg" alt="pajaros"></a>
+        <a href='./filter-animals.html?category="Ave"'> <img src="../assets/icons/icono_pajaro.svg" alt="pajaros"></a>
       </div>
       <div class="shadow">
-        <a href='./filter-animals.html?category="Roedor"'> <img src="./assets/icons/icono_roedor.svg"
+        <a href='./filter-animals.html?category="Roedor"'> <img src="../assets/icons/icono_roedor.svg"
             alt="roedores"></a>
       </div>
       <div class="shadow">
-        <a href='./filter-animals.html?category="Reptil"'><img src="./assets/icons/icono_reptil.svg" alt="reptiles"></a>
+        <a href='./filter-animals.html?category="Reptil"'><img src="../assets/icons/icono_reptil.svg" alt="reptiles"></a>
       </div>
     </div>
 
@@ -144,34 +144,34 @@
     <div class="group">
       <div class="card">
         <div class="img-container">
-          <img src="./assets/bordercollie_smiling.jpg" alt="mascota">
+          <img src="../assets/images/bordercollie_smiling.jpg" alt="mascota">
         </div>
         <h3 class="name">Nala</h3>
-        <p><img src="./assets/icons/icono_logo_negro.svg" alt="">Las Pedroñeras</p>
+        <p><img src="../assets/icons/icono_logo_negro.svg" alt="">Las Pedroñeras</p>
       </div>
       <div class="card">
         <div class="img-container">
-          <img src="./assets/imgYorkshire.jpg" alt="mascota">
+          <img src="../assets/images/imgYorkshire.jpg" alt="mascota">
         </div>
         <h3 class="name">Chico</h3>
-        <p><img src="./assets/icons/icono_logo_negro.svg" alt="">Arona</p>
+        <p><img src="../assets/icons/icono_logo_negro.svg" alt="">Arona</p>
       </div>
       <div class="card">
         <div class="img-container">
-          <img src="./assets/imgSleapingCat.jpg" alt="mascota">
+          <img src="../assets/images/imgSleapingCat.jpg" alt="mascota">
         </div>
         <h3 class="name">Coco</h3>
-        <p><img src="./assets/icons/icono_logo_negro.svg" alt="">Córdoba</p>
+        <p><img src="../assets/icons/icono_logo_negro.svg" alt="">Córdoba</p>
       </div>
       <div class="card">
         <div class="img-container">
-          <img src="./assets/whitebrown_hamster.jpg" alt="mascota">
+          <img src="../assets/images/whitebrown_hamster.jpg" alt="mascota">
         </div>
         <h3 class="name">Gus</h3>
-        <p><img src="./assets/icons/icono_logo_negro.svg" alt="">Teide</p>
+        <p><img src="../assets/icons/icono_logo_negro.svg" alt="">Teide</p>
       </div>
       <div class="card-extra">
-        <img src="./assets/icons/icono_logo_blanco.svg" alt="Kompi Logo" width="88" height="88">
+        <img src="../assets/icons/icono_logo_blanco.svg" alt="Kompi Logo" width="88" height="88">
         <p><span>+315 mascotas</span></p>
         <p>disponibles en kompi</p>
         <div class="footer">
@@ -213,7 +213,7 @@
         <div class="circle">
           <p>1</p>
         </div>
-        <img src="./assets/icono_notificaciones.svg" alt="Registro" width="144" height="144">
+        <img src="../assets/icons/icono_notificaciones.svg" alt="Registro" width="144" height="144">
         <h3>Regístrate en la web</h3>
         <p>Regístrate en dos sencillos pasos.</p>
         <p>¡No te llevará más de 1 min!</p>
@@ -222,7 +222,7 @@
         <div class="circle">
           <p>2</p>
         </div>
-        <img src="./assets//icono_publica.svg" alt="Publicar" width="228" height="144">
+        <img src="../assets/icons/icono_publica.svg" alt="Publicar" width="228" height="144">
         <h3>Publica una adopción</h3>
         <p>Crea la publicación añadiendo características e información relevante de la mascota.<br> ¡No te olvides de
           las
@@ -232,7 +232,7 @@
         <div class="circle">
           <p>3</p>
         </div>
-        <img src="./assets/icono_registra.svg" alt="Notificaciones" width="203" height="144">
+        <img src="../assets/icons/icono_registra.svg" alt="Notificaciones" width="203" height="144">
         <h3>¡Recibe notificaciones!</h3>
         <p>Se te notificará cuando alguien esté interesado en el animal y serás tú quien cierre el acuerdo.</p>
       </div>
@@ -372,15 +372,15 @@
     <div class="information">
 
       <div class="column two">
-        <a href="./index.html"><img class="logo" src="./assets/icons/version_blanca_logo.svg" alt="Kompi logo"
+        <a href="./index.html"><img class="logo" src="../assets/icons/version_blanca_logo.svg" alt="Kompi logo"
             width="74" height="22"></a>
         <a href="mailto:buscokompi@gmail.com" class="mail">buscokompi@gmail.com</a>
         <div class="social">
-          <a href="https://www.facebook.com/adoptaunkompi/"><img src="./assets/icons/icono_facebook.svg" width="21"
+          <a href="https://www.facebook.com/adoptaunkompi/"><img src="../assets/icons/icono_facebook.svg" width="21"
               height="21" alt="facebook"></a>
-          <a href="https://www.instagram.com/adoptaunkompi"><img src="./assets/icons/icono_instagram.svg" width="21"
+          <a href="https://www.instagram.com/adoptaunkompi"><img src="../assets/icons/icono_instagram.svg" width="21"
               height="21" alt="instagram"></a>
-          <a href="https://twitter.com/adoptaunkompi"><img src="./assets/icons/icono_twitter.svg" width="21" height="21"
+          <a href="https://twitter.com/adoptaunkompi"><img src="../assets/icons/icono_twitter.svg" width="21" height="21"
               alt="twitter"></a>
         </div>
       </div>
