--- a/src/html/animal-card-info.html
+++ b/src/html/animal-card-info.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <section>
+    <!-- <section>
         <nav class="topbar">
             <a href="index.html"><img class="logo" src="./assets/icons/version_primario_logo.svg" alt="Logo"></a>
             <div class="burger-img"></div>
@@ -62,7 +62,7 @@
                 <li><a href="./login.html">Iniciar sesión</a></li>
             </ul>
         </nav>
-    </section>
+    </section> -->
 
     <header class="header">
         <div class="header-carousel">
